--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="panel padding-10">
       <div class="row">
-          <div class="col-2 d-flex justify-content-center"><img src="/logo.png" height="50px" /></div>
+          <div class="col-2 d-flex justify-content-center">Logo à placer</div>
           <div class="col-8">
               <div class="row">
                   <div class="col-4 d-flex justify-content-center"><a href="#">Accueil</a></div>
