--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
 <app-header></app-header>
-<app-body></app-body>
-<app-footer></app-footer>
-
-
-
-
-
+<app-intro></app-intro>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
