--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,15 @@
-<p>about works!</p>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis efficitur sapien ut posuere. Integer lobortis nisl nisi, sit amet sodales felis egestas a. Nulla commodo diam sem, a efficitur tellus lobortis id. Proin magna orci, ullamcorper eu molestie ac, efficitur et quam. Praesent tempor sem ipsum, in vehicula sapien efficitur eu. Donec facilisis efficitur lobortis. Nulla vestibulum est a nibh sollicitudin, in aliquam risus volutpat. Curabitur interdum, lacus at laoreet sodales, massa risus dictum lorem, ut laoreet elit lorem sit amet tortor. Nulla facilisi. Nulla imperdiet magna viverra, vestibulum elit vitae, scelerisque lacus. Donec interdum justo non erat sollicitudin, sed ornare nisi iaculis. Integer vulputate interdum orci nec lobortis. Integer posuere dui eget metus ultrices laoreet. Donec vitae risus et mauris facilisis dignissim a id quam. Mauris sed imperdiet ex.
+</p>
+<p>
+    Cras lobortis risus massa, sit amet lacinia sapien mollis vel. Cras laoreet tempor malesuada. Quisque eget nulla id dui semper commodo eu vel lectus. Donec in mollis felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel nisi euismod, egestas dui vitae, posuere magna. Nullam ut ultricies sapien. Mauris id eros vitae nisi condimentum congue.
+</p>
+<p>
+    Proin scelerisque tempor turpis, vitae cursus neque fringilla eleifend. Phasellus eget eros quis tellus mattis congue in id odio. Etiam sit amet pellentesque leo, rutrum porta est. Curabitur laoreet magna tortor. Donec interdum tincidunt imperdiet. Aenean at vulputate ligula, quis pharetra neque. Praesent dignissim imperdiet posuere. Sed vitae varius lacus. Maecenas non commodo mi. Aliquam in vestibulum urna.
+</p>
+<p>
+    Suspendisse potenti. Pellentesque fermentum quam non porta luctus. Phasellus pharetra posuere maximus. Praesent gravida nisi vel lorem tincidunt feugiat. Quisque faucibus facilisis condimentum. Cras a odio lobortis, gravida nisi ut, tempor elit. Mauris faucibus posuere bibendum. In ac commodo orci, vitae sodales est. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent vitae fermentum metus. Morbi ante est, tincidunt vel neque non, venenatis porttitor eros. Mauris volutpat dolor gravida tincidunt tincidunt.
+</p>
+<p>
+    Nulla eleifend volutpat sapien eu tempus. Sed fringilla metus leo. Ut nisi felis, interdum sed auctor eu, hendrerit non felis. Sed in consectetur sem. Curabitur porttitor hendrerit laoreet. Pellentesque faucibus urna arcu, a vulputate lacus molestie vel. Cras sed dapibus lacus. Aenean quis convallis augue. Proin ac lobortis lectus. Mauris ac pulvinar elit. Maecenas maximus cursus lectus. Sed euismod orci in nibh ullamcorper porttitor. In lacinia sed sem vel consectetur. Mauris egestas enim at velit aliquet varius.
+</p>
