--- a/src/app/with-or-without/with-or-without.component.html
+++ b/src/app/with-or-without/with-or-without.component.html
@@ -1,1 +1,9 @@
-<p>with-or-without works!</p>
+<div class="bg-color-1 d-flex justify-content-center f-large padding-25">
+    <div class="row">
+        @for(item of cocktails; track item.id) {
+            <div class="col-3">
+                <app-cocktail [cocktail]="item"></app-cocktail>
+            </div>
+        }
+    </div>
+</div>
