--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,9 +4,10 @@
             <div class="col-2 d-flex justify-content-center"><img src="/logo.png" height="50px" /></div>
             <div class="col-8">
                 <div class="row">
-                    <div class="col-4 d-flex justify-content-center"><a routerLink="/home" routerLinkActive="gras">Accueil</a></div>
-                    <div class="col-4 d-flex justify-content-center"><a routerLink="/with" routerLinkActive="gras">Les cocktails avec alcool</a></div>
-                    <div class="col-4 d-flex justify-content-center"><a routerLink="/without" routerLinkActive="gras">Les cocktails sans alcool</a></div>
+                    <div class="col-3 d-flex justify-content-center"><a routerLink="/home" routerLinkActive="gras">Accueil</a></div>
+                    <div class="col-3 d-flex justify-content-center"><a routerLink="/with" routerLinkActive="gras">Les cocktails avec alcool</a></div>
+                    <div class="col-3 d-flex justify-content-center"><a routerLink="/without" routerLinkActive="gras">Les cocktails sans alcool</a></div>
+                    <div class="col-3 d-flex justify-content-center"><a routerLink="/obs" routerLinkActive="gras">Les observables</a></div>
                 </div>
             </div>
             <div class="col-2 d-flex justify-content-center"><a routerLink="/about" routerLinkActive="gras">A propos</a></div>
